--- a/src/dotnetRPG/Views/Roles/Edit.cshtml
+++ b/src/dotnetRPG/Views/Roles/Edit.cshtml
@@ -1,21 +1,24 @@
 ﻿@{
-    ViewData["Title"] = "Create Role";
+    ViewData["Title"] = "Edit Role";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Create Role</h2>
+@model Microsoft.AspNetCore.Identity.EntityFrameworkCore.IdentityRole
+
+<h2>Edit Role</h2>
+
 @Html.ActionLink("List Roles", "Index") | @Html.ActionLink("Manage User Role", "ManageUserRoles")
 <hr />
-@using (Html.BeginForm("CreatePost", "Roles"))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
-
+    @Html.HiddenFor(model => model.Id)
     <div>
         Role name
     </div>
     <p>
-        @Html.TextBox("RoleName")
+        @Html.TextBoxFor(model => model.Name)
     </p>
     <input type="submit" value="Save" />
 }
